--- a/electron.html
+++ b/electron.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" style="width: 650px;">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-123456789">
                 
             </div>
         </div>
